--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p class="headline-p">Garanta autoridade, credibilidade e alcance no meio digital que vão destacar sua
                     marca
                     no mercado e sair na frente de seus concorrentes<span class="dot">.</span></p>
-                <button onclick="abrirContatos()" class="headline-btn">Contate-me</button>
+                <input type='submit' value='contate-me' onclick="abrirContatos()" class="headline-btn"></input>
             </section>
             <aside>
                 <img id="img-aside" src="assets/programming_adobe_express.svg" alt="logo">
