--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p class="headline-p">Garanta autoridade, credibilidade e alcance no meio digital que vão destacar sua
                     marca
                     no mercado e sair na frente de seus concorrentes<span class="dot">.</span></p>
-                <input type='submit' value='contate-me' onclick="abrirContatos()" class="headline-btn"></input>
+                <input value="Contate-me" type="submit" onclick="abrirContatos()" class="headline-btn"></input>
             </section>
             <aside>
                 <img id="img-aside" src="assets/programming_adobe_express.svg" alt="logo">
@@ -71,30 +71,6 @@
                 </p>
             </div>
         </section>
-
-        <section id="section3">
-            <h2 id="sec3-h2">Projetos<span class="dot">.</span></h2>
-            <h3 id="sec3-h3">Conheça alguns trabalhos <span class="dot"> :</span></h3>
-            <div id="projetos">
-                <div class=" card projetos-box proje1"><img>
-                    <p>Gestão de Clínica</p></img>
-                </div>
-                <div class=" card projetos-box proje2"><img>
-                    <p>lorem ipsum</p></img>
-                </div>
-                <div class=" card projetos-box proje3"><img>
-                    <p>lorem ipsum</p></img>
-                </div>
-            </div>
-            <a href="https://github.com/DevDaviRV">
-                <button id="btn-projeto" class="learn-more">
-                    <span class="circle" aria-hidden="true">
-                        <span class="icon arrow"></span>
-                    </span>
-                    <span class="button-text">GitHub</span>
-                </button>
-            </a>
-        </section>
         <section id="section4">
             <div id="sec4-h2">
                 <h2>Habilidades<span class="dot">.</span></h2>
@@ -111,7 +87,7 @@
                                 </path>
                             </svg>
                         </div>
-                        <h1 class="title">Desenvolvimento</h1>
+                        <h1 class="title">Desenvolvimento </h1>
                     </div>
 
                     <div class="content">
@@ -120,7 +96,7 @@
                                 class="dot">.</span>
                         </p>
 
-                        <a class="btn-link">Read More...</a>
+                        <a onclick="maisInfo()" class="btn-link">Read More...</a>
                     </div>
                 </div>
                 <div class="card2">
@@ -142,7 +118,7 @@
                                 class="dot">.</span>
                         </p>
 
-                        <a class="btn-link">Read More...</a>
+                        <a onclick="maisInfo()" class="btn-link">Read More...</a>
                     </div>
                 </div>
                 <div class="card2">
@@ -164,11 +140,57 @@
                             adipiscing it amet it<span class="dot">.</span>
                         </p>
 
-                        <a class="btn-link">Read More...</a>
+                        <a onclick="maisInfo()" class="btn-link">Read More...</a>
                     </div>
                 </div>
             </div>
+            <div class="items">
+                <div class="item active">
+                    <img src="assets/logo alternativo.png">
+                </div>
+                <div class=" item next">
+                    <img src="assets/logo alternativo.png">
+                </div>
+                <div class="item">
+                    <img src="assets/logo alternativo.png">
+                </div>
+                <div class="item">
+                    <img src="assets/logo alternativo.png">
+                </div>
+                <div class="item prev">
+                    <img src="assets/logo alternativo.png">
+                </div>
+                <div class="button-container">
+                    <div class="button4 btn1"></div>
+                    <div class="button4 btn2"></div>
+                </div>
+            </div>
         </section>
+
+        <section id="section3">
+            <h2 id="sec3-h2">Projetos<span class="dot">.</span></h2>
+            <h3 id="sec3-h3">Conheça alguns trabalhos <span class="dot"> :</span></h3>
+            <div id="projetos">
+                <div class=" card projetos-box proje1">
+                    <p>Gestão de Clínica</p></img>
+                </div>
+                <div class=" card projetos-box proje2">
+                    <p>lorem ipsum</p></img>
+                </div>
+                <div class=" card projetos-box proje3">
+                    <p>lorem ipsum</p></img>
+                </div>
+            </div>
+            <a href="https://github.com/DevDaviRV">
+                <button id="btn-projeto" class="learn-more">
+                    <span class="circle" aria-hidden="true">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">GitHub</span>
+                </button>
+            </a>
+        </section>
+       
         <footer></footer>
     </div>
     <script src="preload.js"></script>
