--- a/index.html
+++ b/index.html
@@ -145,24 +145,28 @@
                 </div>
             </div>
             <div class="items">
+                <h3>Tecnologias<span class="dot"> :</span></h3>
                 <div class="item active">
-                    <img src="assets/logo alternativo.png">
+                    <img src="assets/javascript (5).png">
                 </div>
                 <div class=" item next">
-                    <img src="assets/logo alternativo.png">
+                    <img src="assets/html5.png">
                 </div>
                 <div class="item">
-                    <img src="assets/logo alternativo.png">
+                    <img src="assets/css3.png">
                 </div>
                 <div class="item">
-                    <img src="assets/logo alternativo.png">
+                    <img src="assets/bootstrap.png">
+                </div>
+                <div class="item">
+                    <img src="assets/react-js.png">
                 </div>
                 <div class="item prev">
-                    <img src="assets/logo alternativo.png">
+                    <img src="assets/node-js.png">
                 </div>
                 <div class="button-container">
-                    <div class="button4 btn1"></div>
-                    <div class="button4 btn2"></div>
+                    <div onclick="setaCarrousel()" class="button4 btn1"></div>
+                    <div onclick="setaCarrousel()" class="button4 btn2"></div>
                 </div>
             </div>
         </section>
@@ -181,12 +185,12 @@
                     <p>lorem ipsum</p></img>
                 </div>
             </div>
-            <a href="https://github.com/DevDaviRV">
-                <button id="btn-projeto" class="learn-more">
-                    <span class="circle" aria-hidden="true">
-                        <span class="icon arrow"></span>
+            <a id="linkGit" href="https://github.com/DevDaviRV">
+                <button id="btn-projeto" class="learn-more btnall">
+                    <span class="circle btnall" aria-hidden="true">
+                        <span class=" btnall icon arrow"></span>
                     </span>
-                    <span class="button-text">GitHub</span>
+                    <span class="button-text btnall">GitHub</span>
                 </button>
             </a>
         </section>
