--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <h2 class="tt">Habilidades<span class="dot">.</span></h2>
                 <h3 id="testjs" class="tt">Serviços que ofereço<span class="dot"> :</span></h3>
             </div>
-            <div id="cards-habilidade">
+            <div onselectstart="return false" id="cards-habilidade">
                 <div class="card2">
                     <div class="header">
                         <div class="img-box">
@@ -217,8 +217,8 @@
         <section id="section3">
             <h2 id="sec3-h2" class="tt">Projetos<span class="dot">.</span></h2>
             <h3 id="sec3-h3" class="tt">Conheça alguns trabalhos <span class="dot"> :</span></h3>
-            <div id="projetos">
-                <div class=" card projetos-box proje1">
+            <div onselectstart="return false" id="projetos">
+                <div id="card1" class=" card projetos-box proje1">
                     <p class="pcard">Gestão de Clínica</p>
                 </div>
                 <div class=" card projetos-box proje2">
@@ -228,12 +228,12 @@
                     <p class="pcard">SaaS</p>
                 </div>
             </div>
-            <a id="linkGit" href="https://github.com/DevDaviRV">
+            <a  onselectstart="return false" id="linkGit" href="https://github.com/DevDaviRV">
                 <button id="btn-projeto" class="learn-more btnall">
                     <span class="circle btnall" aria-hidden="true">
                         <span class=" btnall icon arrow"></span>
                     </span>
-                    <span class="button-text btnall">GitHub</span>
+                    <span class="naoSelecionavel button-text btnall">GitHub</span>
                 </button>
             </a>
         </section>
@@ -278,7 +278,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <span>Enviar</span>
+                        <span class="naoSelecionavel">Enviar</span>
                     </button>
                 </form>
             </div>
