--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="css/footer.css" rel="stylesheet">
     <link href="css/lightDark.css" rel="stylesheet">
     <link href="css/mediaqueries.css" rel="stylesheet">
-    <link rel="shortcut icon" href="assets/Design sem nome (41).svg">
+    <link rel="shortcut icon" href="assets1/Design sem nome (41).svg">
     <script defer src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
 </head>
@@ -34,13 +34,13 @@
     <div id="ancora-inicio"></div>
     <header id="head">
         <nav>
-            <img id="logoImg" src="assets/Novo_Projeto__1_-removebg-preview.svg" alt="Logo Marca">
+            <img id="logoImg" src="assets1/Novo_Projeto__1_-removebg-preview.svg" alt="Logo Marca">
             <div id="navMenu">
                 <a class="linksNav tt" href="#ancora-inicio">Ínicio</a>
                 <a class="linksNav tt" href="#section2">Sobre</a>
-                <a class="linksNav tt" href="#section4">Habilidades</a>
+                <a class="linksNav tt" href="#section4">Serviços</a>
                 <a class="linksNav tt" href="#section3">Projetos</a>
-                <a class="linksNav tt" href="">Portifólio</a>
+                <a class="linksNav tt" href="pagePortifolio/index.html">Portifólio</a>
                 <button id="btn-Omodal" onclick="openModal()">TESTEMODAL</button>
                 <div class="toggleWrapper">
                     <input onclick="changeBg1()" type="checkbox" class="dn" id="dn">
@@ -99,7 +99,7 @@
             <input value="Contate-me" type="submit" onclick="abrirContatos()" class="headline-btn"></input>
         </section>
         <div id="div-aside">
-            <img id="img-aside" src="assets/aside2.svg" alt="img Aside">
+            <img id="img-aside" src="assets1/aside2.svg" alt="img Aside">
         </div>
     </main>
 
@@ -107,7 +107,7 @@
         <h2 id="sec2-h2" class="tt">Sobre mim<span class="dot">.</span></h2>
         <div class="sobremim">
             <div id="img-about">
-                <img id="img-gif" src="assets/avatartop.svg" alt="Foto Pessoal">
+                <img id="img-gif" src="assets1/avatartop.svg" alt="Foto Pessoal">
                 <img class="icons-about i1"
                     src="https://user-images.githubusercontent.com/104698942/204721350-76c6ff26-e4a7-44fb-90b9-2bee49db2a63.png"
                     alt="icon coding">
@@ -207,25 +207,25 @@
         <div class="items">
             <h3 class="tt">Tecnologias<span class="dot"> :</span></h3>
             <div class="item active">
-                <img src="assets/javascript (5).svg">
+                <img src="assets1/javascript (5).svg">
             </div>
             <div class=" item next">
-                <img src="assets/html5.svg">
+                <img src="assets1/html5.svg">
             </div>
             <div class="item">
-                <img src="assets/css3.svg">
+                <img src="assets1/css3.svg">
             </div>
             <div class="item">
-                <img src="assets/bootstrap.svg">
+                <img src="assets1/bootstrap.svg">
             </div>
             <div class="item">
-                <img src="assets/react-js.svg">
+                <img src="assets1/react-js.svg">
             </div>
             <div class="item">
-                <img src="assets/solidity (3).svg">
+                <img src="assets1/solidity (3).svg">
             </div>
             <div class="item prev">
-                <img src="assets/node-js.svg">
+                <img src="assets1/node-js.svg">
             </div>
             <div class="button-container">
                 <div onclick="setaCarrousel()" class="button4 btn1"></div>
@@ -276,8 +276,9 @@
                 <a class="fa-twitter" href="https://twitter.com/dev_davirv"><i class="fa "></i></a>
                 <a class="fa-email" href="mailto:dev.davirv01@gmail.com"><i class="fa "></i></a>
             </div>
-            <p class="Copyright tt">Copyright &copy; 2022<a href="#"><span class="dot"> DevDaviRV.dev </span></a>-
+            <p class="Copyright tt">Copyright &copy; 2022<a href="#"><span class="dot"> DDRV - StudioTech </span></a>-
                 Todos os Direitos Reservados.</p>
+                <p class="Copyright tt">Desenvolvido por <span class="dot">DevDaviRV</span></p>
         </div>
         <!--Left-->
         <div class="right">
