Att index.html para css mediaqueries

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <span class="bottom"></span>
             </label>
             <div id="navMenu">
-                <a class="linksNav tt" href="#ancora-inicio">Ínicio</a>
+                <a onclick="closeModal()" class="linksNav tt" href="#ancora-inicio">Ínicio</a>
                 <a class="linksNav tt" href="#section2">Sobre</a>
                 <a class="linksNav tt" href="#section4">Serviços</a>
-                <a class="linksNav tt" href="#section3">Projetos</a>
+                <a class="linksNav tt" href="#sec3-h2">Projetos</a>
                 <a class="linksNav tt" href="pagePortifolio/index.html">Portifólio</a>
                 
                 <div class="toggleWrapper">
@@ -67,11 +67,11 @@
             </div>
         </nav>
         <nav id="modalContato">
-            <a class="" href="#ancora-inicio">Ínicio</a>
-            <a class="" href="#section2">Sobre</a>
-            <a class="" href="#section4">Habilidades</a>
-            <a class="" href="#section3">Projetos</a>
-            <a class="" href="">Portifólio</a>
+            <a onclick="closeModal()" class="cm" href="#ancora-inicio">Ínicio</a>
+            <a onclick="closeModal()" class="cm" href="#section2">Sobre</a>
+            <a onclick="closeModal()" class="cm" href="#section4">Habilidades</a>
+            <a onclick="closeModal()" class="cm" href="#section3">Projetos</a>
+            <a class="" href="pagePortifolio/index.html">Portifólio</a>
             
         </nav>
     </header>
@@ -227,10 +227,10 @@
         <h3 id="sec3-h3" class="tt">Conheça alguns trabalhos <span class="dot"> :</span></h3>
         <div onselectstart="return false" id="projetos">
             <div id="card1" class=" card projetos-box proje1">
-                <p class="pcard">Gestão de Clínica</p>
+                <p class="pcard">Sites Completos</p>
             </div>
             <div class=" card projetos-box proje2">
-                <p class="pcard">Sites Completos</p>
+                <p class="pcard">Gestão de Clínica</p>
             </div>
             <div class=" card projetos-box proje3">
                 <p class="pcard">SaaS</p>
