--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
     <footer class="footer">
         <div class="left">
-            <h4 class="title-footer tt"> DevDaviRV <span class="dot">...</span></h4>
+            <h4 class="title-footer tt"> DDRV - StudioTech <span class="dot">...</span></h4>
             <p class="links">
 
                 <a class="tt" href="#" title="Voltar ao Início">Início</a>
