--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                         tendo mais visibilidade.<span class="dot">.</span>
                     </p>
                 </div>
-            </div>          
+            </div>
         </div>
-        
+
         <!-- <div class="items">
             <h3 class="tt">Tecnologias<span class="dot"> :</span></h3>
             <div class="item active">
@@ -221,6 +221,18 @@
         </div> -->
     </section>
 
+    <div class="container-btn">
+        <a href="https://api.whatsapp.com/send?phone=5535997302235&text=Ola%2C%20vim%20pelo%20Site%2C%20desejo%20fazer%20um%20orcamento.">
+            <p class="glitch">
+                <span aria-hidden="true">Desejo Contratar</span>
+                Desejo Contratar
+                <span aria-hidden="true">Desejo Contratar</span>
+            </p>
+        </a>
+        <div class="linha"></div>
+    </div>
+
+
     <section id="section3">
         <h2 id="sec3-h2" class="tt">Projetos<span class="dot">.</span></h2>
         <h3 id="sec3-h3" class="tt">Conheça alguns trabalhos <span class="dot"> :</span></h3>
@@ -235,12 +247,12 @@
                 <p class="pcard">SaaS</p>
             </div>
         </div>
-        <a onselectstart="return false" id="linkGit" href="https://github.com/DevDaviRV">
+        <a onselectstart="return false" id="linkGit" href="pagePortifolio/index.html">
             <button id="btn-projeto" class="learn-more btnall">
                 <span class="circle btnall" aria-hidden="true">
                     <span class=" btnall icon arrow"></span>
                 </span>
-                <span class="naoSelecionavel button-text btnall">GitHub</span>
+                <span class="naoSelecionavel button-text btnall">Confira</span>
             </button>
         </a>
     </section>
@@ -266,6 +278,7 @@
             <p class="Copyright tt">Copyright &copy; 2022<a href="#"><span class="dot"> DDRV - StudioTech </span></a>-
                 Todos os Direitos Reservados.</p>
             <p class="Copyright tt">Desenvolvido por <span class="dot">DevDaviRV</span></p>
+            <p class="Copyright tt">Política de <span class="dot"><a href=""> Privacidade</a></span></p>
         </div>
         <!--Left-->
         <div class="right">
