--- a/pagePortifolio/index.html
+++ b/pagePortifolio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
@@ -11,8 +11,8 @@
 
   <!-- Favicons -->
 
-  <link href="assets/img/portfolio/Design sem nome (41).svg" rel="icon">
-  <link href="assets/img/portfolio/Design sem nome (41).svg" rel="shortcut icon">
+  <link href="assets/img/Design sem nome (41).svg" rel="icon">
+  <link href="assets/img/Design sem nome (41).svg" rel="shortcut icon">
 
   <!-- Google Fonts -->
   <link
@@ -42,7 +42,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profileimg.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/avatartopBG.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">DevDaviRV</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/dev_davirv/" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -91,7 +91,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profileimg.jpg" class="img-fluid" alt="">
+            <img src="assets/img/avatartopBG.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Desenvolvedor Web.</h3>
@@ -103,7 +103,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.meusite.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.ddrvstudio.tech</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Tel:</strong> <span>(35) 9-99730-2235</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Itajubá, MG</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Instagram:</strong>
@@ -114,7 +114,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Formação:</strong> <span>Superior Incompleto</span>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>dev.davirv01@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponível</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Contratação:</strong> <span>Disponível</span></li>
                 </ul>
@@ -289,7 +289,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portifólio</h2>
+          <h2>Portfólio</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
             consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
             in iste officiis commodi quidem hic quas.</p>
@@ -301,7 +301,7 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">Sites</li>
               <li data-filter=".filter-card">Web-App</li>
-              <li data-filter=".filter-web">IA Art</li>
+              <li data-filter=".filter-web">IA Design</li>
             </ul>
           </div>
         </div>
@@ -321,9 +321,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/iart.png" class="img-fluid sizeimg" alt="">
+              <img src="assets/img/iart.jpg" class="img-fluid sizeimg" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/iart.png" data-gallery="portfolioGallery"
+                <a href="assets/img/iart.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -386,7 +386,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Services</h2>
+          <h2>Serviços</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
             consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
             in iste officiis commodi quidem hic quas.</p>
@@ -395,31 +395,28 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
-              occaecati cupiditate non provident</p>
+            <h4 class="title"><a href="">Sites</a></h4>
+            <p class="description">Desenvolvimento de sites institucionais,
+              Criação de lojas virtuais, Landing Pages, Páginas de captura...</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat tarad limino ata</p>
+            <h4 class="title"><a href="">Sistemas</a></h4>
+            <p class="description">Desenvolvimento de sistemas web personalizados focados na necessidade do seu negócio.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-              fugiat nulla pariatur</p>
+            <h4 class="title"><a href="">UI Design</a></h4>
+            <p class="description"> Crio interfaces de usuário atraentes e intuitivas, que tornam os produtos fáceis de usar e atraentes para os usuários.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-              mollit anim id est laborum</p>
+            <h4 class="title"><a href="">SEO</a></h4>
+            <p class="description">Otimização de sites para mecanismos de busca e ranqueamento nas pesquisas. (SEO)</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
+            <h4 class="title"><a href="">Manutenção e Atualização.</a></h4>
             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
               voluptatum deleniti atque</p>
           </div>
