--- a/pagePortifolio/index.html
+++ b/pagePortifolio/index.html
@@ -313,7 +313,7 @@
               <img src="assets/img/site1.jpg" class="img-fluid sizeimg" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/site1.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="Site para agencia de desenvolvimento. Tecnologias: JS CSS HTML BOOTSTRAP"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -324,7 +324,7 @@
               <img src="assets/img/iart.jpg" class="img-fluid sizeimg" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/iart.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="Demonstração de design utilizando inteligência artificial"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -335,7 +335,7 @@
               <img src="assets/img/site2.jpg" class="img-fluid sizeimg" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/site2.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="Site Desenvolvido para empresa do ramo de construção"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -346,7 +346,7 @@
               <img src="https://user-images.githubusercontent.com/104698942/205792532-9cf64561-e1e5-4f5f-8b27-b152a31e0e19.svg" class="img-fluid sizeimg" alt="">
               <div class="portfolio-links">
                 <a href="https://user-images.githubusercontent.com/104698942/205792532-9cf64561-e1e5-4f5f-8b27-b152a31e0e19.svg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="Sistema de gestão de cliníca. Tecnologias: JavaScript, CSS, BootStrap, NodeJS (ainda em desenvolvimento)"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -357,7 +357,7 @@
               <img src="assets/img/iart2.jpeg" class="img-fluid sizeimg" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/iart2.jpeg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="Demonstração de design utilizando inteligência artificial"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -368,7 +368,7 @@
               <img src="assets/img/site3.jpg" class="img-fluid sizeimg" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/site3.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="Site desenvolvido para empresa do ramo de Comercio/Restaurante"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -394,7 +394,7 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
+            <div class="icon"><i class="bi bi-code-square"></i></div>
             <h4 class="title"><a href="">Sites</a></h4>
             <p class="description">Desenvolvimento de sites institucionais,
               Criação de lojas virtuais, Landing Pages, Páginas de captura...</p>
@@ -405,17 +405,17 @@
             <p class="description">Desenvolvimento de sistemas web personalizados focados na necessidade do seu negócio.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
+            <div class="icon"><i class="bi bi-columns"></i></div>
             <h4 class="title"><a href="">UI Design</a></h4>
             <p class="description"> Crio interfaces de usuário atraentes e intuitivas, que tornam os produtos fáceis de usar e atraentes para os usuários.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
+            <div class="icon"><i class="bi bi-search"></i></div>
             <h4 class="title"><a href="">SEO</a></h4>
             <p class="description">Otimização de sites para mecanismos de busca e ranqueamento nas pesquisas. (SEO)</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="bi bi-brightness-high"></i></div>
+            <div class="icon"><i class="bi bi-wrench-adjustable"></i></div>
             <h4 class="title"><a href="">Manutenção e Atualização.</a></h4>
             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
               voluptatum deleniti atque</p>
