--- a/index.html
+++ b/index.html
@@ -121,9 +121,11 @@
             <h2 class="tt">Serviços<span class="dot">.</span></h2>
             <h3 id="testjs" class="tt">O que oferecemos<span class="dot"> :</span></h3>
         </div>
-        <div id="text-service">Ao escolher a nossa empresa, você pode esperar qualidade e excelência em design e
+        <div id="bgtext">
+        <div id="text-service" class="tt">Ao escolher a nossa empresa, você pode esperar qualidade e excelência em design e
             desenvolvimento.
             A <span class="dot">DDRV - StudioTech</span> trabalha em estreita colaboração com nossos clientes. </div>
+        </div>
         <div onselectstart="return false" id="cards-habilidade">
             <div class="card2">
                 <div class="header">
@@ -190,6 +192,35 @@
                 </div>
             </div>
         </div>
+
+        <!-- <div class="items">
+            <h3 class="tt">Tecnologias<span class="dot"> :</span></h3>
+            <div class="item active">
+                <img src="assets1/javascript (5).svg" alt="icon-js">
+            </div>
+            <div class=" item next">
+                <img src="assets1/html5.svg" alt="icon-html">
+            </div>
+            <div class="item">
+                <img src="assets1/css3.svg" alt="icon-css">
+            </div>
+            <div class="item">
+                <img src="assets1/bootstrap.svg" alt="icon-bootstrap">
+            </div>
+            <div class="item">
+                <img src="assets1/react-js.svg" alt="icon-react">
+            </div>
+            <div class="item">
+                <img src="assets1/solidity (3).svg" alt="icon-solidity">
+            </div>
+            <div class="item prev">
+                <img src="assets1/node-js.svg" alt="icon-node">
+            </div>
+            <div class="button-container">
+                <div onclick="setaCarrousel()" class="button4 btn1"></div>
+                <div onclick="setaCarrousel()" class="button4 btn2"></div>
+            </div>
+        </div> -->
     </section>
 
     <div class="container-btn">
@@ -209,13 +240,13 @@
         <h3 id="sec3-h3" class="tt">Conheça alguns trabalhos <span class="dot"> :</span></h3>
         <div onselectstart="return false" id="projetos">
             <div id="card1" class=" card projetos-box proje1">
-                <p class="pcard">Sites Completos</p>
+                <p class="pcard ">Sites Completos</p>
             </div>
             <div class=" card projetos-box proje2">
-                <p class="pcard">Gestão de Clínica</p>
+                <p class="pcard ">Gestão de Clínica</p>
             </div>
             <div class=" card projetos-box proje3">
-                <p class="pcard">SaaS</p>
+                <p class="pcard ">SaaS</p>
             </div>
         </div>
         <a onselectstart="return false" id="linkGit" href="pagePortifolio/index.html">
@@ -248,17 +279,17 @@
             </div>
             <p class="Copyright tt">Copyright &copy; 2022<a href="#"><span class="dot"> DDRV - StudioTech </span></a>-
                 Todos os Direitos Reservados.</p>
-            <p class="Copyright tt">Desenvolvido por <span class="dot">DevDaviRV</span></p>
+            <p class="Copyright tt">Desenvolvido por <a href="https://www.linkedin.com/in/devdavirv/"><span class="dot">DevDaviRV</span></a></p>
             <p class="Copyright tt">Política de <span class="dot"><a href=""> Privacidade</a></span></p>
         </div>
         <!--Left-->
         <div class="right">
             <h4 class="title-footer tt">Fale Comigo <span class="dot">:</span></h4>
             <form action="https://formspree.io/f/myyvalge" method="post">
-                <div class="caret"><input type="text" name="nome" placeholder="Qual é seu nome?" required="" /></div>
-                <div class="caret"><input type="email" name="email" placeholder="E o seu E-mail?" required="" /></div>
-                <div class="caret"><input type="text" name="assunto" placeholder="Qual o assunto?" required="" /></div>
-                <div class="caret"><textarea name="messagem" placeholder="Deixe sua mensagem..." required=""></textarea>
+                <div><input class="caret" type="text" name="nome" placeholder="Qual é seu nome?" required="" /></div>
+                <div><input class="caret" type="email" name="email" placeholder="E o seu E-mail?" required="" /></div>
+                <div><input class="caret" type="text" name="assunto" placeholder="Qual o assunto?" required="" /></div>
+                <div><textarea class="caret" name="messagem" placeholder="Deixe sua mensagem..." required=""></textarea>
                 </div>
                 <button type="submit" id="btn-form">
                     <div class="svg-wrapper-1">
