--- a/pagePortifolio/index.html
+++ b/pagePortifolio/index.html
@@ -46,7 +46,7 @@
         <h1 class="text-light"><a href="index.html">DevDaviRV</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/dev_davirv/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://twitter.com/dev_davirv" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://github.com/DevDaviRV" class="twitter"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/devdavirv/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="../index.html" class="site"><i class="bx bi bi-globe"></i></a>
         </div>
@@ -84,9 +84,11 @@
 
         <div class="section-title">
           <h2>Sobre</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Meu nome é Davi Roque Vianna, atuando como Desenvolvedor Web freelancer em minha agência<a
+              href="index.html"> (DDRV - StudioTech)</a>
+            , sou um profissional dedicado e apaixonado pelo que faço, com uma forte atenção aos detalhes e um
+            compromisso com a entrega de projetos de qualidade.
+            .</p>
         </div>
 
         <div class="row">
@@ -96,35 +98,36 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Desenvolvedor Web.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua.
+              aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.ddrvstudio.tech</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.ddrvstudio.tech</span>
+                  </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Tel:</strong> <span>(35) 9-99730-2235</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Itajubá, MG</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Instagram:</strong>
-                    <span>instagram.com/dev_davirv/</span></li>
+                    <span>instagram.com/dev_davirv/</span>
+                  </li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Formação:</strong> <span>Superior Incompleto</span>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>dev.davirv01@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>dev.davirv01@gmail.com</span>
+                  </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponível</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Contratação:</strong> <span>Disponível</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et
-              ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
-              Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              Sou um Desenvolvedor Web com habilidades em HTML, CSS, JavaScript, Bootstrap e ReactJS.
+              Sou capaz de criar sites e aplicativos web atraentes, responsivos e funcionais. Além disso, tenho experiência em trabalhar com o NodeJS para criar aplicativos
+              web de back-end de alto desempenho. Estou comprometido com a entrega de projetos de alta qualidade e estou
+              ansioso para trabalhar em sua equipe.
             </p>
           </div>
         </div>
@@ -145,67 +148,7 @@
             in iste officiis commodi quidem hic quas.</p>
         </div>
 
-        <div class="row skills-content">
 
-          <div class="col-lg-6" data-aos="fade-up">
-
-            <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
-            <div class="progress">
-              <span class="skill">React JS <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Node JS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
     </section><!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
@@ -312,8 +255,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/site1.jpg" class="img-fluid sizeimg" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/site1.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Site para agencia de desenvolvimento. Tecnologias: JS CSS HTML BOOTSTRAP"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/site1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Site para agencia de desenvolvimento. Tecnologias: JS CSS HTML BOOTSTRAP"><i
+                    class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -323,8 +267,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/iart.jpg" class="img-fluid sizeimg" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/iart.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Demonstração de design utilizando inteligência artificial"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/iart.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Demonstração de design utilizando inteligência artificial"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -334,8 +278,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/site2.jpg" class="img-fluid sizeimg" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/site2.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Site Desenvolvido para empresa do ramo de construção"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/site2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Site Desenvolvido para empresa do ramo de construção"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -343,10 +287,14 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="https://user-images.githubusercontent.com/104698942/205792532-9cf64561-e1e5-4f5f-8b27-b152a31e0e19.svg" class="img-fluid sizeimg" alt="">
+              <img
+                src="https://user-images.githubusercontent.com/104698942/205792532-9cf64561-e1e5-4f5f-8b27-b152a31e0e19.svg"
+                class="img-fluid sizeimg" alt="">
               <div class="portfolio-links">
-                <a href="https://user-images.githubusercontent.com/104698942/205792532-9cf64561-e1e5-4f5f-8b27-b152a31e0e19.svg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Sistema de gestão de cliníca. Tecnologias: JavaScript, CSS, BootStrap, NodeJS (ainda em desenvolvimento)"><i class="bx bx-plus"></i></a>
+                <a href="https://user-images.githubusercontent.com/104698942/205792532-9cf64561-e1e5-4f5f-8b27-b152a31e0e19.svg"
+                  data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Sistema de gestão de cliníca. Tecnologias: JavaScript, CSS, BootStrap, NodeJS (ainda em desenvolvimento)"><i
+                    class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -356,8 +304,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/iart2.jpeg" class="img-fluid sizeimg" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/iart2.jpeg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Demonstração de design utilizando inteligência artificial"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/iart2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Demonstração de design utilizando inteligência artificial"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -367,8 +315,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/site3.jpg" class="img-fluid sizeimg" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/site3.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Site desenvolvido para empresa do ramo de Comercio/Restaurante"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/site3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Site desenvolvido para empresa do ramo de Comercio/Restaurante"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -402,12 +350,14 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
             <h4 class="title"><a href="">Sistemas</a></h4>
-            <p class="description">Desenvolvimento de sistemas web personalizados focados na necessidade do seu negócio.</p>
+            <p class="description">Desenvolvimento de sistemas web personalizados focados na necessidade do seu negócio.
+            </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-columns"></i></div>
             <h4 class="title"><a href="">UI Design</a></h4>
-            <p class="description"> Crio interfaces de usuário atraentes e intuitivas, que tornam os produtos fáceis de usar e atraentes para os usuários.</p>
+            <p class="description"> Crio interfaces de usuário atraentes e intuitivas, que tornam os produtos fáceis de
+              usar e atraentes para os usuários.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-search"></i></div>
@@ -496,22 +446,23 @@
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
-                <div class="error-message">Houve algum problema, sinta-se a vontade de tentar outra forma de contato!</div>
+                <div class="error-message">Houve algum problema, sinta-se a vontade de tentar outra forma de contato!
+                </div>
                 <div class="sent-message">Sua mensagem foi enviada, Obrigado!</div>
               </div>
               <button type="submit" id="btn-form">
                 <div class="svg-wrapper-1">
-                    <div class="svg-wrapper">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                            <path fill="none" d="M0 0h24v24H0z"></path>
-                            <path fill="currentColor"
-                                d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z">
-                            </path>
-                        </svg>
-                    </div>
+                  <div class="svg-wrapper">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                      <path fill="none" d="M0 0h24v24H0z"></path>
+                      <path fill="currentColor"
+                        d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z">
+                      </path>
+                    </svg>
+                  </div>
                 </div>
                 <span class="naoSelecionavel">Enviar</span>
-            </button>
+              </button>
             </form>
           </div>
 
