Add Title nos Links(<a>)

--- a/pagePortifolio/index.html
+++ b/pagePortifolio/index.html
@@ -45,10 +45,10 @@
         <img src="assets/img/avatartopBG.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">DevDaviRV</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.instagram.com/dev_davirv/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://github.com/DevDaviRV" class="twitter"><i class="bx bxl-github"></i></a>
-          <a href="https://www.linkedin.com/in/devdavirv/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="../index.html" class="site"><i class="bx bi bi-globe"></i></a>
+          <a title="Instagram" href="https://www.instagram.com/dev_davirv/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a title="GitHub" href="https://github.com/DevDaviRV" class="twitter"><i class="bx bxl-github"></i></a>
+          <a title="Linkedin" href="https://www.linkedin.com/in/devdavirv/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a title="DDRV - StudioTech" href="../index.html" class="site"><i class="bx bi bi-globe"></i></a>
         </div>
       </div>
 
