--- a/pagePortifolio/index.html
+++ b/pagePortifolio/index.html
@@ -159,10 +159,10 @@
               <span id="icon4"><i title="BOOTSTRAP" class=" iconsb bi bi-bootstrap"></i></span>
               <span id="icon5"><i title="REACT JS" class=" iconsb bi"><img style="width: 4.5rem; height:4.5rem;"
                     src="/pagePortifolio/assets/img/structure (1).png" alt=""></i></span>
-              <span id="icon6"><i title="NODE JS" class=" iconsb kjk bi"><img style="width: 4.5rem; height:4.5rem;"
+              <span id="icon6"><i title="NODE JS" class=" iconsb bi"><img style="width: 4.5rem; height:4.5rem;"
                     src="/pagePortifolio/assets/img/node.svg" alt=""></i></span>
               <span id="icon7"><i title="GITHUB" class=" iconsb bi bi-github"></i></span>
-              <span id="icon8"><i title="GIT" class=" iconsb biw bi-git"></i></span>
+              <span id="icon8"><i title="GIT" class=" iconsb bi bi-git"></i></span>
               <!-- <i class=" iconsb bi bi-pencil-square"></i> -->
             </div>
             <div class="line-hab"></div>
