--- a/pagePortifolio/index.html
+++ b/pagePortifolio/index.html
@@ -11,8 +11,8 @@
 
   <!-- Favicons -->
 
-  <link href="assets/img/Design sem nome (41).svg" rel="icon">
-  <link href="assets/img/Design sem nome (41).svg" rel="shortcut icon">
+  <link href="https://user-images.githubusercontent.com/104698942/210135191-beffdfb7-44eb-404d-ae8c-a42768773f89.svg" rel="icon">
+  <link href="https://user-images.githubusercontent.com/104698942/210135191-beffdfb7-44eb-404d-ae8c-a42768773f89.svg" rel="shortcut icon">
 
   <!-- Google Fonts -->
   <link
