--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <span class="headline-span">DDRV - StudioTech</span></a> tem mais de 1 ano de experiência em ajudar
                 empresas a criar presença online, criando sites e sistemas para facilitar seus processos. Nosso objetivo
                 é ajudar sua empresa a ter autoridade e facilidade no mundo digital. Com nossa habilidade e experiência,
-                iremos ajudar sua empresa a alcançar o sucesso online.<br><br>
+                iremos te ajudar a alcançar o sucesso online.<br><br>
                 Entre em contato para discutir como posso ajudar seu negócio.
         </div>
     </section>
